syntax = "proto3";
package models;

import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "models";
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message App {
  string name       = 1 [(gogoproto.moretags) = "datastore:\"name\""];
  string status     = 2 [(gogoproto.moretags) = "datastore:\"status\""];
  string release_id = 3 [(gogoproto.moretags) = "datastore:\"release_id,noindex\""];
  string endpoint   = 4 [(gogoproto.moretags) = "datastore:\"endpoint,noindex\""];
}

message Build {
  string id        = 1 [(gogoproto.moretags) = "datastore:\"id\""];
  string app       = 2 [(gogoproto.moretags) = "datastore:\"app\""];
  string remote_id = 3 [(gogoproto.moretags) = "datastore:\"remote_id,noindex\""];
  string status    = 4 [(gogoproto.moretags) = "datastore:\"status,noindex\""];
  int32 created_at = 5 [(gogoproto.moretags) = "datastore:\"created_at,noindex\""];
}

message Release {
  string id        = 1 [(gogoproto.moretags) = "datastore:\"id\""];
  string app       = 2 [(gogoproto.moretags) = "datastore:\"app\""];
  string build_id  = 3 [(gogoproto.moretags) = "datastore:\"build_id,noindex\""];
  string status    = 4 [(gogoproto.moretags) = "datastore:\"status,noindex\""];
  int32 created_at = 5 [(gogoproto.moretags) = "datastore:\"created_at,noindex\""];
}


message Resource {
  string name                   = 1 [(gogoproto.moretags) = "datastore:\"name\""];
  string kind                   = 2 [(gogoproto.moretags) = "datastore:\"kind\""];
  string status                 = 3 [(gogoproto.moretags) = "datastore:\"status,noindex\""];
  string URL                    = 4 [(gogoproto.moretags) = "datastore:\"URL,noindex\""];
  repeated string apps          = 5 [(gogoproto.moretags) = "datastore:\"apps,noindex\""];
  bytes exports                 = 6 [(gogoproto.moretags) = "datastore:\"exports,noindex\""];
  bytes parameters              = 7 [(gogoproto.moretags) = "datastore:\"parameters,noindex\""];
}

message ResourceVar {
  string key   = 1;
  string value = 2;
}

message EnvConfig {
  map<string,string> data = 1;
}